<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PowerActivity">
    <item
        android:id="@+id/Disconnect"
        android:title="@string/txtDisconnect"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/Settings"
        android:title="@string/txtSettings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/Results"
        android:title="@string/txtResults"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/Help"
        android:title="@string/txtMenuHelp"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>