<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_settings"
    tools:context="ru.i_fighter.makiwara1.LapaActivity">

    <LinearLayout
        android:id="@+id/linearLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/imgButtonLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/btnlogolink_hdpi" />

        <RelativeLayout
            android:id="@+id/layOutBtnReaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100">

            <Button
                android:id="@+id/btnReactionOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:layout_centerInParent="false"
                android:alpha="0.4"

                android:text="@string/txtOffReaction"
                android:textAllCaps="false"
                android:textColorLink="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnReactionOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="false"
                android:layout_centerInParent="false"
                android:alpha="0.5"
                android:background="@android:drawable/btn_default"
                android:text="@string/txtOnReaction"
                android:textAllCaps="false"

                android:textColorLink="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutKickPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLink"
        tools:layout_editor_absoluteX="180dp">

        <TextView
            android:id="@+id/txtKickPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtKickPower"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutKickPower"
        tools:layout_editor_absoluteX="168dp">

        <TextView
            android:id="@+id/txtPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="45sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="131dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTimeOfPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPower"
        tools:layout_editor_absoluteX="48dp">

        <TextView
            android:id="@+id/txtTimeOfPower"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/txtTimeOfPower"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="230dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTimePower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTimeOfPower"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTimeOfPower"
        tools:layout_editor_absoluteX="168dp">

        <TextView
            android:id="@+id/txtTimePower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="45sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearTimePower"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearTimePower"
        tools:layout_editor_absoluteX="62dp">

        <TextView
            android:id="@+id/txtWordReaction"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="0.05"
            android:text="@string/txtWordReaction"
            android:textColor="@android:color/background_light"
            android:textSize="35sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="412dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutReaction"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutReaction"
        tools:layout_editor_absoluteX="168dp">

        <TextView
            android:id="@+id/txtReaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="0"
            android:textColor="@android:color/background_light"
            android:textSize="45sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDimensReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearReaction"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearReaction"
        tools:layout_editor_absoluteX="107dp">

        <TextView
            android:id="@+id/txtDimensReaction"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/txtDimensReaction"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold|italic" />

        <Chronometer
            android:id="@+id/chronometer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@android:color/background_light"

            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDimensReaction"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutDimensReaction"
        tools:layout_editor_absoluteX="0dp">

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearStartStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearHelp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHelp"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.4"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnStart"
            android:textColor="@android:color/background_dark"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.4"
            android:background="@android:drawable/btn_default"
            android:text="@string/btnStop"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutResReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearStartStop"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearStartStop"
        tools:layout_editor_absoluteX="272dp">

        <Button
            android:id="@+id/btnRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:elevation="0dp"
            android:gravity="center_vertical"
            android:text="@string/btnRes"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtProm"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_above="@+id/layoutDimensReaction"
        android:layout_alignLeft="@+id/layoutReaction"
        android:layout_alignStart="@+id/layoutReaction"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/linearStartStop"
        app:layout_constraintRight_toRightOf="@+id/linearStartStop"
        app:layout_constraintTop_toBottomOf="@+id/linearStartStop" />

    <TextView
        android:id="@+id/txtElapsTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutReaction"
        android:layout_toLeftOf="@+id/layoutDimensReaction"
        android:layout_toStartOf="@+id/layoutDimensReaction"
        android:text="TextView"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/txtProm"
        app:layout_constraintTop_toBottomOf="@+id/txtProm" />

    <Button
        android:id="@+id/btnS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutTimeOfPower"
        android:layout_toEndOf="@+id/linearPower"
        android:layout_toRightOf="@+id/linearPower"
        android:background="@android:drawable/btn_default"
        android:text="Start"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@+id/layoutDimensReaction"
        app:layout_constraintTop_toBottomOf="@+id/btnE" />

    <Button
        android:id="@+id/btnE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnS"
        android:layout_alignLeft="@+id/layoutTimeOfPower"
        android:layout_alignStart="@+id/layoutTimeOfPower"
        android:background="@android:drawable/btn_default"
        android:text="End"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="@+id/layoutKickPower"
        app:layout_constraintRight_toLeftOf="@+id/layoutReaction"
        app:layout_constraintTop_toBottomOf="@+id/layoutReaction" />

</android.support.constraint.ConstraintLayout>
